--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "start-prox": "ng serve --proxy-config proxy.conf.json",
+    "start-prox-local": "ng serve --proxy-config proxy.conf.local.json",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
