--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@clr/angular": "^0.11.11",
+    "@clr/icons": "^0.11.11",
+    "@clr/ui": "^0.11.11",
+    "@webcomponents/custom-elements": "^1.0.9",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
