--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@clr/icons": "^0.11.11",
     "@clr/ui": "^0.11.11",
     "@webcomponents/custom-elements": "^1.0.9",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
