--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@clr/ui": "^0.11.11",
     "@webcomponents/custom-elements": "^1.0.9",
     "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
